Forgot to fix the CSP on th site

--- a/www.divd.nl/whydonate2/index.html
+++ b/www.divd.nl/whydonate2/index.html
@@ -29,6 +29,6 @@ scripts:
                 </thead>
                 <tbody id='donations'></tbody>
         </table>
-        <button class='more' value=2>See all</button>
+        <button class='donate_btn' value=2>See all</button>
         <i>This page is updated once per hour, it may take some time for your donation to appear.</i>
 </div>
