--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -4,9 +4,11 @@ title: Please donate
 scripts:
 - supp.js
 ---
+{% comment %}
 <p>
 	Deze tekst staat in een HTML en kan eventueel weg
 </p>
+{% endcomment %}
 <div id='actie'>
         <h1 id='name'></h1>
         <p id='description'></p>
