When you are bitten by your own optimisations...

--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -14,7 +14,7 @@ scripts:
         <p id='description'></p>
         <div id='progress'></div>
         <h2>
-                &euro;<span id='amount'></span> of &euro;<span id='goal'></span> raised!
+                &euro;<span id='amount'>...</span> <span id='goal'>...</span> raised!
         </h2>
         <p>
                 <button value=10 class='donate_btn'>Donate &euro; 10</button>
@@ -34,6 +34,6 @@ scripts:
                                 <td>Message</td>
                         </tr>
                 </thead>
-                <tbody id='donations'></tbody>
+                <tbody id='donations'>...</tbody>
         </table>
 </div>
