Forgot some tags

--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -10,11 +10,11 @@ scripts:
 </p>
 {% endcomment %}
 <div id='actie'>
-        <h1 id='name'></h1>
-        <p id='description'></p>
-        <div id='progress'></div>
+        <h1 id='name'>&nbsp;</h1>
+        <p id='description'>&nbsp;</p>
+        <div id='progress'>&nbsp;</div>
         <h2>
-                &euro;<span id='amount'>...</span> <span id='goal'>...</span> raised!
+                &euro;<span id='amount'>...</span> <span id='goal'>&nbsp;</span> raised!
         </h2>
         <p>
                 <button value=10 class='donate_btn'>Donate &euro; 10</button>
