Creating member pages in _team
Adding people that recently joined and / or weren't listed on the team page yet.

--- a/www.divd.nl/_team/Lennaert Oudshoorn.html
+++ b/www.divd.nl/_team/Lennaert Oudshoorn.html
@@ -1,12 +1,12 @@
 ---
 name: Lennaert Oudshoorn
-role: Researcher and web master
+role: Researcher, CSIRT handler, and web master
 layout: team
 appearance: 90
 board: false
 active: true
 twitter: lennaert89
--linkedin: 
--wikipedia: 
+linkedin: lennaertoudshoorn
+-wikipedia:
 ---
-Researcher and CSIRT handler at DIVD. He studies Digital Forensics at the University of Applied Sciences in Leiden. 
+Researcher and CSIRT handler at DIVD. He studies Digital Forensics at the University of Applied Sciences in Leiden.
