--- a/www.divd.nl/_team/Joost Hendricksen.html
+++ b/www.divd.nl/_team/Joost Hendricksen.html
@@ -5,7 +5,8 @@ layout: team
 appearance: 210
 board: false
 active: true
--twitter:
--linkedin:
+twitter: joostsec
+linkedin: joost-hendricksen-5b6251a
 -wikipedia:
 ---
+Security architect working for Dutch vital infrastructure companies.
