--- a/www.divd.nl/_team/Gerard Janssen.html
+++ b/www.divd.nl/_team/Gerard Janssen.html
@@ -1,11 +1,12 @@
 ---
 name: Gerard Janssen
-role: Reporter
+role: Writer
 layout: team
 appearance: 220
 board: false
 active: true
--twitter:
+twitter: gerardusjanssen
 -linkedin:
 -wikipedia:
 ---
+Gerard Janssen studied Physics in Delft, started a phd in Oceanography, but after a few years working as a deejay/producer ended up writing for magazines and publishers. Working on a book about hackers and the art of hacking.
