Et voila, a button

--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -9,11 +9,18 @@ scripts:
 	Deze tekst staat in een HTML en kan eventueel weg
 </p>
 {% endcomment %}
+<h2>Donate via PayPall</h2>
+<form action="https://www.paypal.com/donate" method="post" target="_top">
+<input type="hidden" name="hosted_button_id" value="AJMLNQQJG3ZXL" />
+<input type="image" src="https://www.paypalobjects.com/en_US/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_NL/i/scr/pixel.gif" width="1" height="1" />
+</form>
+<h2>Donate via Supp</h2>
 <div id='actie'>
-        <h1 id='name'>&nbsp;</h1>
+        <h2 id='name'>&nbsp;</h1>
         <p id='description'>&nbsp;</p>
         <div id='progress'>&nbsp;</div>
-        <h2>
+        <h3>
                 &euro;<span id='amount'>...</span> <span id='goal'>&nbsp;</span> raised!
         </h2>
         <p>
