Update Chris van 't Hof.html

--- a/www.divd.nl/_team/Chris van 't Hof.html
+++ b/www.divd.nl/_team/Chris van 't Hof.html
@@ -5,7 +5,7 @@ layout: team
 appearance: 20
 board: true
 active: true
--twitter:
+-twitter: cvthof
 linkedin: chris-van-t-hof-312609
 ---
 Secretary, text writer and the guy who tries to keep everyone together. He has been researcher, writer and presenter in ICT for 22 years now. His preferred channel is e-mail.
