--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -5,11 +5,9 @@ scripts:
 - supp.js
 ---
 {% comment %}
-<p>
-	Deze tekst staat in een HTML en kan eventueel weg
-</p>
+
 {% endcomment %}
-<h2>Donate via PayPall</h2>
+<h2>Donate via PayPal</h2>
 <form action="https://www.paypal.com/donate" method="post" target="_top">
 <input type="hidden" name="hosted_button_id" value="AJMLNQQJG3ZXL" />
 <input type="image" src="https://www.paypalobjects.com/en_US/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
