Add Crypto donate options
Added Shibu Inu and Cardano to donatepage. It would probably
make sense to add BTC as well, if we have that already.

--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -12,6 +12,28 @@ scripts:
 <input type="hidden" name="hosted_button_id" value="AJMLNQQJG3ZXL" />
 <input type="image" src="https://www.paypalobjects.com/en_US/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 </form>
+<h2>Donate via crypto</h2>
+
+<table>
+  <thead>
+    <tr>
+        <td>Currency</td>
+        <td>&nbsp;</td>
+        <td>Address</td>
+    </tr>
+    </thead>
+    <tr>
+        <td><img src="/images/icons/cardano_ada.png" alt="cardano" width=24></td>
+        <td>Cardano</td>
+        <td>DdzFFzCqrhswAQ77W3ybUXvC5jTCgmAsnNa6YfiptSUhgEmniypKzzU1rSLZ9iAYorbt25WLtgv1ZG4qiEvnbMF9acm3TMTbUag9wWhX</td>
+    </tr>
+    <tr>
+        <td><img src="/images/icons/shiba.png" alt="Shiba Inu" width=24></td>
+        <td>Shiba Inu</td>
+        <td>0x2a44df7f3376906c644da3310360ca6311e752ba</td>
+    </tr>
+</table>
+
 <h2>Donate via Supp</h2>
 <div id='actie'>
         <h3 id='name'>&nbsp;</h3>
