Donate page: new QR codes for wallet generated.

--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -25,12 +25,12 @@ scripts:
     <tr>
         <td><img src="/images/icons/cardano_ada.png" alt="cardano" width=24></td>
         <td>Cardano</td>
-        <td>DdzFFzCqrhswAQ77W3ybUXvC5jTCgmAsnNa6YfiptSUhgEmniypKzzU1rSLZ9iAYorbt25WLtgv1ZG4qiEvnbMF9acm3TMTbUag9wWhX</td>
+        <td><a href="/donate/ADA.jpeg" target="_blank">Ae2tdPwUPEZMRnUFv5zZrx2x3whFosRwkVgEDY5HoeAB9aypfu9xgEtD5Gh</a></td>
     </tr>
     <tr>
         <td><img src="/images/icons/shiba.png" alt="Shiba Inu" width=24></td>
         <td>Shiba Inu</td>
-        <td>0x2a44df7f3376906c644da3310360ca6311e752ba</td>
+        <td><a href="/donate/Shiba%20Inu-ERC20.jpeg" target="_blank">0xde4dCc5Fb4381cc5F05DB9e09C7dB38f2E4B5Ec1</a></td>
     </tr>
 </table>
 
