Fixing team page @jan and @thomas

--- a/www.divd.nl/_team/Jan Los.html
+++ b/www.divd.nl/_team/Jan Los.html
@@ -1,11 +1,11 @@
 ---
 name: Jan Los
-role: Researcher
+role: Researcher and HRM
 layout: team
 appearance: 330
 board: false
 active: true
--twitter:
--linkedin: 
+twitter: bolnr1
+linkedin: janlos
 -wikipedia:
 ---
