--- a/www.divd.nl/_team/Thomas van Voorst.html
+++ b/www.divd.nl/_team/Thomas van Voorst.html
@@ -1,11 +1,11 @@
 ---
 name: Thomas van Voorst
-role: Researcher
+role: CSIRT handler
 layout: team
 appearance: 350
 board: false
 active: true
--twitter:
--linkedin: 
+twitter: callmetjomas
+linkedin: thomasvanvoorst
 -wikipedia:
 ---
