Fixing team page Ralph

--- a/www.divd.nl/_team/Ralph Horn.html
+++ b/www.divd.nl/_team/Ralph Horn.html
@@ -1,11 +1,11 @@
 ---
 name: Ralph Horn
-role: Researcher
+role: CSIRT handler
 layout: team
 appearance: 340
 board: false
 active: true
 -twitter:
--linkedin: 
+linkedin: ralph-h-686283105 
 -wikipedia:
 ---
