--- a/www.divd.nl/_team/Victor Pasman.html
+++ b/www.divd.nl/_team/Victor Pasman.html
@@ -1,11 +1,11 @@
 ---
 name: Victor Pasman
-role: Researcher
+role: CSIRT handler
 layout: team
 appearance: 360
 board: false
 active: true
 -twitter:
--linkedin: 
+linkedin: victor-pasman-68245124
 -wikipedia:
 ---
