Introduced department Academy

--- a/www.divd.nl/_team/Barry van Kampen.html
+++ b/www.divd.nl/_team/Barry van Kampen.html
@@ -1,6 +1,7 @@
 ---
 name: Barry van Kampen
-role: Researcher and CSIRT handler
+role: Researcher
+dept: Academy
 layout: team
 appearance: 120
 board: false
