Added CSIRT department

--- a/www.divd.nl/_team/Lennaert Oudshoorn.html
+++ b/www.divd.nl/_team/Lennaert Oudshoorn.html
@@ -1,6 +1,7 @@
 ---
 name: Lennaert Oudshoorn
 role: Researcher, CSIRT handler, and web master
+dept: CSIRT
 layout: team
 appearance: 90
 board: false
