Added Institute department

--- a/www.divd.nl/_team/Fleur van Leusden.html
+++ b/www.divd.nl/_team/Fleur van Leusden.html
@@ -1,6 +1,7 @@
 ---
 name: Fleur van Leusden
 role: Chief Information Security Officer
+dept: Institute
 layout: team
 appearance: 200
 board: false
