--- a/www.divd.nl/_team/Astrid Oosenbrug.html
+++ b/www.divd.nl/_team/Astrid Oosenbrug.html
@@ -1,11 +1,11 @@
 ---
 name: Astrid Oosenbrug
-role: Treasurer
+role: Treasurer and Head of Academy
 dept: Academy
 layout: team
 appearance: 30
 board: true
-english: 
+english:
 active: true
 -twitter:
 linkedin: astridoosenbrug
