--- a/www.divd.nl/_team/Willem Kutschruiter.html
+++ b/www.divd.nl/_team/Willem Kutschruiter.html
@@ -1,6 +1,6 @@
 ---
 name: Willem Kutschruiter
-role: CSIRT coordinator
+role: CSIRT handler
 dept: CSIRT
 layout: team
 appearance: 110
@@ -10,4 +10,4 @@ active: true
 linkedin: willemkutschruiter
 -wikipedia: 
 ---
-CSIRT coordinator
+CSIRT handler
