--- a/www.divd.nl/_team/Hans van de Looy.html
+++ b/www.divd.nl/_team/Hans van de Looy.html
@@ -1,6 +1,6 @@
 ---
 name: Hans van de Looy
-role: Ethical Conscience
+role: Ethical Conscience / Advisor
 dept: Research
 layout: team
 appearance: 100
