--- a/www.divd.nl/_team/Jeroen van de Weerd.html
+++ b/www.divd.nl/_team/Jeroen van de Weerd.html
@@ -1,6 +1,6 @@
 ---
 name: Jeroen van de Weerd
-role: Web Editor and Reporter
+role: Web Editor, Researcher and Reporter
 dept: Research
 layout: team
 appearance: 140
