Fix linkedin (copy/paste error from the past)

--- a/www.divd.nl/_team/Ruben Uithol.html
+++ b/www.divd.nl/_team/Ruben Uithol.html
@@ -7,6 +7,6 @@ appearance: 380
 board: false
 active: true
 -twitter:
--linkedin: victor-pasman-68245124
+linkedin: ruben-uithol-a967b4194
 -wikipedia:
 ---
