--- a/www.divd.nl/_team/Edwin van Andel.html
+++ b/www.divd.nl/_team/Edwin van Andel.html
@@ -1,6 +1,7 @@
 ---
 name: Edwin van Andel
-role: Unique Intelligence
+role: Unique Intelligence / Advisor
+dept: Research
 layout: team
 appearance: 50
 board: false
