Added Chantal to supervisory board

--- a/www.divd.nl/_team/Chantal Stekelenburg.html
+++ b/www.divd.nl/_team/Chantal Stekelenburg.html
@@ -3,10 +3,13 @@ name: Chantal Stekelenburg
 role: Member of supervisory board
 dept: Institute
 layout: team
-appearance: 500
+appearance: 1500
 board: false
+supervision: true
+super_role:
 active: true
 -twitter:
 linkedin: chantalstekelenburg
 -wikipedia:
 ---
+Member of supervisory board
