Added intro and twitter

--- a/www.divd.nl/_team/Chantal Stekelenburg.html
+++ b/www.divd.nl/_team/Chantal Stekelenburg.html
@@ -8,8 +8,9 @@ board: false
 supervision: true
 super_role:
 active: true
--twitter:
+twitter: MiFare_lady
 linkedin: chantalstekelenburg
 -wikipedia:
 ---
-Member of supervisory board
+Chantal takes care of the hacker community at Zerocopter, is co-founder of [WICCA](http://www.womenofwicca.nl/) (Women In Cybersecurity Community Association) and brings infosec ladies and (female) security enthusiasts together. She also volunteers in cybercrime teams at the Dutch Police, can be found at hacker events and heard in podcasts.
+
