--- a/www.divd.nl/_team/Max van der Horst.html
+++ b/www.divd.nl/_team/Max van der Horst.html
@@ -11,3 +11,5 @@ linkedin: shaunster
 -wikipedia:
 ---
 
+Currently working as the security officer of a cloud MSP and studying the at the Security and Network Engineering Master’s program at the University of Amsterdam. Special interests lie with cryptography, anything other low-level and enjoys tutoring/teaching, for which you can always send a message!
+
