Added Laurent to the website, updated Yuri's introduction

--- a/www.divd.nl/_team/Yury Zhauniarovich.html
+++ b/www.divd.nl/_team/Yury Zhauniarovich.html
@@ -10,4 +10,5 @@ active: true
 linkedin: zhauniarovich
 -wikipedia:
 ---
-Researcher level 3 (international)
+[Yury Zhauniarovich](https://zhauniarovich.com/) is an Assistant Professor in Cybersecurity at the Technology, Policy and Management (TPM) faculty at TU Delft (Netherlands). Before joining the university, he has spent several years working in the industry, and therefore he is curious how technology can facilitate security. His research interests include network measurements, mobile security, DDoS attacks, blockchain technologies, data analysis, and machine learning.
+
