--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -10,7 +10,7 @@ scripts:
 <h2>Donate via PayPal</h2>
 <form action="https://www.paypal.com/donate" method="post" target="_top">
 <input type="hidden" name="hosted_button_id" value="AJMLNQQJG3ZXL" />
-<input type="image" src="https://www.paypalobjects.com/en_US/NL/i/btn/btn_donateCC_LG.gif" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<input type="image" src="btn_donateCC_LG.gif" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 </form>
 <h2>Donate via crypto</h2>
 
@@ -34,7 +34,7 @@ scripts:
     </tr>
 </table>
 
-<h2>Donate via Supp</h2>
+<h2>Donate via Supp (iDeal, SOFORT, Bancontact, or KBC/CBC)</h2>
 <div id='actie'>
         <h3 id='name'>&nbsp;</h3>
         <p id='description'>&nbsp;</p>
