--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -9,7 +9,7 @@ scripts:
 {% endcomment %}
 <h2>Donate via PayPal</h2>
 <form action="https://www.paypal.com/donate" method="post" target="_top">
-<input type="hidden" name="hosted_button_id" value="AJMLNQQJG3ZXL" />
+<input type="hidden" name="hosted_button_id" value="U5MRM5XSH36BG" />
 <input type="image" src="btn_donateCC_LG.gif" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 </form>
 <h2>Donate via crypto</h2>
