--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -10,7 +10,7 @@ scripts:
 <h2>Donate via PayPal</h2>
 <form action="https://www.paypal.com/donate" method="post" target="_top">
 <input type="hidden" name="hosted_button_id" value="U5MRM5XSH36BG" />
-<input type="image" src="btn_donateCC_LG.gif" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<input type="image" src="/donate/btn_donateCC_LG.gif" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 </form>
 <h2>Donate via crypto</h2>
 
