--- a/www.divd.nl/donate/index.html
+++ b/www.divd.nl/donate/index.html
@@ -34,6 +34,7 @@ scripts:
     </tr>
 </table>
 
+<a name="donations-banktransfer"></a>
 <h2>Donations via bank transfer</h2>
 <table>
         <thead>
@@ -47,6 +48,26 @@ scripts:
                       <td>16 december 2021</td>
                       <td>$100.000</td>
                       <td>Huntress</td>
+              </tr>
+              <tr>
+                      <td>January 2022</td>
+                      <td>&euro;10.000</td>
+                      <td>ESET</td>
+              </tr>
+              <tr>
+                      <td>January 2022</td>
+                      <td>$5.000</td>
+                      <td>Unveil Security Group</td>
+              </tr>
+              <tr>
+                      <td>January 2022</td>
+                      <td>$5.000</td>
+                      <td>Servosity</td>
+              </tr>
+              <tr>
+                      <td>January 2022</td>
+                      <td>$5.000</td>
+                      <td>Blumira</td>
               </tr>
 </table>
 <h2>Donate via Supp (iDeal, SOFORT, Bancontact, or KBC/CBC)</h2>
