--- a/www.divd.nl/_team/Jonathan Bouman.html
+++ b/www.divd.nl/_team/Jonathan Bouman.html
@@ -6,7 +6,7 @@ layout: team
 appearance: 500
 board: false
 active: true
-twitter:
+twitter: jonathanbouman
 linkedin: "jonathanbouman"
 ---
 Hunts bugs in humans and computers for living.
