--- a/www.divd.nl/_team/Wouter Schoot.html
+++ b/www.divd.nl/_team/Wouter Schoot.html
@@ -8,6 +8,6 @@ board: false
 active: true
 twitter: WouterSchoot
 linkedin: wouterschoot
--wikipedia:
+github: wschoot
 ---
 Fixes typo's and dead links on sites and is part in the operations team. Likes Ansible and automating Linux in general.
