--- a/www.divd.nl/_team/Lucinda Sterk.html
+++ b/www.divd.nl/_team/Lucinda Sterk.html
@@ -9,4 +9,4 @@ active: true
 twitter: Luusco
 linkedin: "lucinda-sterk"
 ---
-She started her career in journalism in 2004 and switched to communications and PR in 2008. After almost a decade at the National Crisiscenter for Counter Terrorism and cyber security she moved to Fox-IT. She loves working with nerds and nerds love working with her. Some call her the meme-queen. But everyone else can call me Boss of Communications
+She started her career in journalism in 2004 and switched to communications and PR in 2008. After almost a decade at the National Crisiscenter for Counter Terrorism and cyber security she moved to Fox-IT. She loves working with nerds and nerds love working with her. Some call her the meme-queen. But everyone else can call her Boss of Communications.
