--- a/www.divd.nl/_team/John Cornegge.html
+++ b/www.divd.nl/_team/John Cornegge.html
@@ -1,7 +1,7 @@
 ---
 name: John Cornegge
 role: Developer
-dept: Development
+dept: Research
 layout: team
 appearance: 500
 board: false
@@ -10,4 +10,4 @@ twitter: JohnCornegge
 linkedin: JohnCornegge
 github: 
 ---
-Solutions Architect, Lead Develper and security enthousiast
+Solutions Architect, Lead Developer and security enthousiast
