Updates to reflect new roles. Fixes #228

--- a/www.divd.nl/_team/Astrid Oosenbrug.html
+++ b/www.divd.nl/_team/Astrid Oosenbrug.html
@@ -1,6 +1,6 @@
 ---
 name: Astrid Oosenbrug
-role: Treasurer and Head of Academy
+role: Chair and Head of Academy
 dept: Academy
 layout: team
 appearance: 30
@@ -11,4 +11,4 @@ active: true
 linkedin: astridoosenbrug
 wikipedia: https://nl.wikipedia.org/wiki/Astrid_Oosenbrug
 ---
-Treasurer, lobbyist and foster parent to many young hackers. She started as sysadmin 20 years ago, but has mostly been politically active since, as Member of Parliament and in numerous NGOs. Her preferred channel is f2f.
+Chair, formerly known as DIVD treasurer, lobbyist and foster parent to many young hackers. She started as sysadmin 20+ years ago, but has mostly been politically active since, as Member of Parliament and in numerous NGOs. Her preferred channel is f2f.
