--- a/www.divd.nl/_team/Fleur van Leusden.html
+++ b/www.divd.nl/_team/Fleur van Leusden.html
@@ -1,13 +1,13 @@
 ---
 name: Fleur van Leusden
-role: Chief Information Security Officer
+role: Secretary
 dept: Institute
 layout: team
 appearance: 200
-board: false
+board: true
 active: true
--twitter: 
+-twitter:
 linkedin: fleur-van-leusden-356bb054
--wikipedia: 
+-wikipedia:
 ---
-Chief Information Security Officer
+Secretary, former DIVD CISO. Asks the harder questions and assists the chairwoman with preparing meetings. Keeps track of board decisions as well as making sure decisions match DIVD goals and policies.
