--- a/www.divd.nl/_team/Victor Gevers.html
+++ b/www.divd.nl/_team/Victor Gevers.html
@@ -1,11 +1,11 @@
 ---
 name: Victor Gevers
-role: Chairman
+role: Head of research
 dept: Research
 layout: team
 appearance: 10
-board: true
+board: false
 active: true
 twitter: 0xDUDE
 ---
-Chairman, Head of Research, Visionary and Janitor of our online environment. He is the undisputed champion in Responsible Disclosure, with 5.600+ vulnerability reports successfully handled in the last 18 years. Don’t send him e mails, as he receives millions a day. His preferred channel is Twitter.
+Head of Research, Visionary and Janitor of our online environment. He is the undisputed champion in Responsible Disclosure, with 5.600+ vulnerability reports successfully handled in the last 18 years. Don’t send him e mails, as he receives millions a day. His preferred channel is Twitter.
