--- a/www.divd.nl/_team/Shairesh Algoe.html
+++ b/www.divd.nl/_team/Shairesh Algoe.html
@@ -10,4 +10,4 @@ active: true
 linkedin: shaireshalgoe
 -wikipedia:
 ---
-Treasurer, Passionate about information security and tech and enjoys teaching and telling stories. He tries to keep information security simple with more than 12 years of experience. His preferred channel is F2F.
+Treasurer, passionate about information security and tech and enjoys teaching and telling stories. He tries to keep information security simple with more than 12 years of experience. His preferred channel is F2F.
