--- a/www.divd.nl/_team/Victor Gevers.html
+++ b/www.divd.nl/_team/Victor Gevers.html
@@ -8,4 +8,4 @@ board: false
 active: true
 twitter: 0xDUDE
 ---
-Head of Research, Visionary and Janitor of our online environment. He is the undisputed champion in Responsible Disclosure, with 5.600+ vulnerability reports successfully handled in the last 18 years. Don’t send him e mails, as he receives millions a day. His preferred channel is Twitter.
+Head of Research, visionary and janitor of our online environment. Chairman as his previous role. He is the undisputed champion in Responsible Disclosure, with 5.600+ vulnerability reports successfully handled in the last 18 years. Don’t send him e mails, as he receives millions a day. His preferred channel is Twitter.
