--- a/www.divd.nl/_team/Chris van 't Hof.html
+++ b/www.divd.nl/_team/Chris van 't Hof.html
@@ -9,4 +9,4 @@ active: true
 -twitter: cvthof
 linkedin: chris-van-t-hof-312609
 ---
-Text writer and the guy who tries to keep everyone together. He has been researcher, writer and presenter in ICT for 22 years now. His preferred channel is email.
+Director and our previous secretary, text writer and the guy who tries to keep everyone together. He has been researcher, writer and presenter in ICT for 22 years now. His preferred channel is email.
