--- a/www.divd.nl/_team/Victor Pasman.html
+++ b/www.divd.nl/_team/Victor Pasman.html
@@ -1,7 +1,7 @@
 ---
 name: Victor Pasman
-role: Researcher
-dept: Research
+role: CSIRT handler
+dept: CSIRT
 layout: team
 appearance: 360
 board: false
