Preparing for when www goes to TheOrg for the team pages

--- a/cases.html
+++ b/cases.html
@@ -47,7 +47,7 @@ title: Cases
 				    				,
 				    			{%- endif -%}
 								{%- if team contains case_author -%}
-				<a href='https://www.divd.nl/team/{{ case_author | uri_escape }}'>{{ case_author }}</a>
+				<a href='https://www.divd.nl/people/{{ case_author | uri_escape }}'>{{ case_author }}</a>
 								{%- else -%}
 				{{ case_author }}
 								{%- endif -%}
@@ -55,7 +55,7 @@ title: Cases
 				    	{%- else -%}
 							{%- assign case_author = p.author | default: "anonymous" -%}
 							{%- if team contains case_author -%}
-				<a href='https://www.divd.nl/team/{{ case_author | uri_escape }}'>{{ case_author }}</a>
+				<a href='https://www.divd.nl/people/{{ case_author | uri_escape }}'>{{ case_author }}</a>
 							{%- else -%}
 				{{ case_author }}
 							{%- endif -%}
@@ -91,7 +91,7 @@ title: Cases
 				    				,
 				    			{%- endif -%}
 								{%- if team contains case_author -%}
-				<a href='https://www.divd.nl/team/{{ case_author | uri_escape }}'>{{ case_author }}</a>
+				<a href='https://www.divd.nl/people/{{ case_author | uri_escape }}'>{{ case_author }}</a>
 								{%- else -%}
 				{{ case_author }}
 								{%- endif -%}
@@ -99,7 +99,7 @@ title: Cases
 				    	{%- else -%}
 							{%- assign case_author = p.author | default: "anonymous" -%}
 							{%- if team contains case_author -%}
-				<a href='https://www.divd.nl/team/{{ case_author | uri_escape }}'>{{ case_author }}</a>
+				<a href='https://www.divd.nl/people/{{ case_author | uri_escape }}'>{{ case_author }}</a>
 							{%- else -%}
 				{{ case_author }}
 							{%- endif -%}
